added bootstrap and background image

--- a/code/Front-end /login.html
+++ b/code/Front-end /login.html
@@ -55,6 +55,9 @@
 
         <div class="hero-body">
           <div class="container">
+            <img class="first-img-blur" src="./IMG/coder-guy.jpeg">
+        </div>
+          <div class="container">
             <div class="login-area">
 
                 <h1 style="color: rgb(46, 46, 46); text-align: center;" class="title is-1">  Login  </h1>
