--- a/code/index.html
+++ b/code/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/scss" href="./css/modal-animation.scss">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.0/css/bulma.min.css">
     <script src="https://kit.fontawesome.com/3bef3ed85d.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -41,8 +42,8 @@
                     <a class="navbar-item">
                       Documentation
                     </a>
-                    <span class="navbar-item">
-                        <a class="button is-link is-inverted" href="#" id="Monkey-login">
+                    <span class="navbar-item" id="seven">
+                        <a class="button button-login is-link is-inverted" href="#" id="seven">
                           <span>Login</span>
                         </a>
                     </span>
@@ -60,8 +61,9 @@
         <div class="hero-body">
 
         
-          <div class="popup-login">
-              <div class="maincontainer">
+          <div class="popup-login" id="modal-container">
+            
+              <div class="maincontainer modal-background">
                 <div class="monkeylogin">
                   <div class="animcon" id="animcon">
                     <img id="hands" src="./images/hands.png"/>
@@ -81,6 +83,11 @@
                 <script type="text/javascript" src="script.js"></script>
               </div>    
             </div>
+
+            <svg class="modal-svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" preserveAspectRatio="none">
+              <rect x="0" y="0" fill="none" width="226" height="162" rx="3" ry="3"></rect>
+            </svg>
+
           </div>
 
         </div>
@@ -93,15 +100,19 @@
 
   // Popup Login screen 
 
-document.getElementById("Monkey-login").addEventListener("click", function(){
-document.querySelector(".popup-login").style.display = "flex";
+  $('.button-login').click(function(){
+  var buttonId = $(this).attr('id');
+  $('#modal-container').removeAttr('class').addClass(buttonId);
+  $('body').addClass('modal-active');
 })
+
 
 // Close popup
 
-document.getElementById("Home").addEventListener("click", function(){
-    document.querySelector(".popup-login").style.display = "none";
-})
+$('#modal-container').click(function(){
+  $(this).addClass('out');
+  $('body').removeClass('modal-active');
+});
 
 </script>
 </html>
